MCR-3057 temporary enhance ObjectIdGenerator to return base ids and catch all exceptions while ocfl migration